src/parser/GrammarParser.java
// Generated from src/parser/Grammar.g4 by ANTLR 4.7.2

package parser;
import grammar.*;
import java.util.LinkedList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		WHITESPACE=10, EPS=11, TOKENS=12, IGNORE=13, START=14, RULES=15, CODE=16, 
		NAME=17, REGEX=18;
	public static final int
		RULE_full = 0, RULE_toks = 1, RULE_tokensList = 2, RULE_singleToken = 3, 
		RULE_ignore = 4, RULE_ignoreList = 5, RULE_rules = 6, RULE_ruleList = 7, 
		RULE_singleRule = 8, RULE_arguments = 9, RULE_argument = 10, RULE_alternatives = 11, 
		RULE_ruleBody = 12, RULE_atoms = 13, RULE_atom = 14, RULE_terminal = 15, 
		RULE_nonTerminal = 16, RULE_parameters = 17, RULE_start = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"full", "toks", "tokensList", "singleToken", "ignore", "ignoreList", 
			"rules", "ruleList", "singleRule", "arguments", "argument", "alternatives", 
			"ruleBody", "atoms", "atom", "terminal", "nonTerminal", "parameters", 
			"start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'='", "';'", "'('", "')'", "':'", "','", "'|'", 
			null, "'$'", "'@tokens'", "'@skip'", "'@start'", "'@rules'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "WHITESPACE", 
			"EPS", "TOKENS", "IGNORE", "START", "RULES", "CODE", "NAME", "REGEX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FullContext extends ParserRuleContext {
		public Grammar grammar;
		public Token h;
		public ToksContext t;
		public IgnoreContext i;
		public RulesContext r;
		public StartContext s;
		public TerminalNode CODE() { return getToken(GrammarParser.CODE, 0); }
		public ToksContext toks() {
			return getRuleContext(ToksContext.class,0);
		}
		public IgnoreContext ignore() {
			return getRuleContext(IgnoreContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public FullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_full; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterFull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitFull(this);
		}
	}

	public final FullContext full() throws RecognitionException {
		FullContext _localctx = new FullContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_full);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			((FullContext)_localctx).h = match(CODE);
			setState(39);
			((FullContext)_localctx).t = toks();
			setState(40);
			((FullContext)_localctx).i = ignore();
			setState(41);
			((FullContext)_localctx).r = rules();
			setState(42);
			((FullContext)_localctx).s = start();

			        ((FullContext)_localctx).grammar =  new Grammar((((FullContext)_localctx).h!=null?((FullContext)_localctx).h.getText():null), ((FullContext)_localctx).t.val, ((FullContext)_localctx).i.val, ((FullContext)_localctx).r.val, ((FullContext)_localctx).s.val);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToksContext extends ParserRuleContext {
		public List<TokenRule> val;
		public TokensListContext t;
		public TerminalNode TOKENS() { return getToken(GrammarParser.TOKENS, 0); }
		public TokensListContext tokensList() {
			return getRuleContext(TokensListContext.class,0);
		}
		public ToksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterToks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitToks(this);
		}
	}

	public final ToksContext toks() throws RecognitionException {
		ToksContext _localctx = new ToksContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_toks);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(TOKENS);
			setState(46);
			match(T__0);
			setState(47);
			((ToksContext)_localctx).t = tokensList();
			setState(48);
			match(T__1);

			        ((ToksContext)_localctx).val =  ((ToksContext)_localctx).t.val;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokensListContext extends ParserRuleContext {
		public List<TokenRule> val;
		public SingleTokenContext head;
		public TokensListContext tail;
		public SingleTokenContext singleToken() {
			return getRuleContext(SingleTokenContext.class,0);
		}
		public TokensListContext tokensList() {
			return getRuleContext(TokensListContext.class,0);
		}
		public TokensListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokensList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTokensList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTokensList(this);
		}
	}

	public final TokensListContext tokensList() throws RecognitionException {
		TokensListContext _localctx = new TokensListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tokensList);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				((TokensListContext)_localctx).head = singleToken();
				setState(52);
				((TokensListContext)_localctx).tail = tokensList();

				        ((TokensListContext)_localctx).val =  ((TokensListContext)_localctx).tail.val;
				        _localctx.val.add(0, ((TokensListContext)_localctx).head.val);
				    
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				 ((TokensListContext)_localctx).val =  new LinkedList<TokenRule>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleTokenContext extends ParserRuleContext {
		public TokenRule val;
		public Token id;
		public Token regex;
		public TerminalNode NAME() { return getToken(GrammarParser.NAME, 0); }
		public TerminalNode REGEX() { return getToken(GrammarParser.REGEX, 0); }
		public SingleTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleToken; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSingleToken(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSingleToken(this);
		}
	}

	public final SingleTokenContext singleToken() throws RecognitionException {
		SingleTokenContext _localctx = new SingleTokenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_singleToken);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((SingleTokenContext)_localctx).id = match(NAME);
			setState(59);
			match(T__2);
			setState(60);
			((SingleTokenContext)_localctx).regex = match(REGEX);
			setState(61);
			match(T__3);

			        ((SingleTokenContext)_localctx).val =  new TokenRule((((SingleTokenContext)_localctx).id!=null?((SingleTokenContext)_localctx).id.getText():null), (((SingleTokenContext)_localctx).regex!=null?((SingleTokenContext)_localctx).regex.getText():null));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IgnoreContext extends ParserRuleContext {
		public List<String> val;
		public IgnoreListContext ignores;
		public TerminalNode IGNORE() { return getToken(GrammarParser.IGNORE, 0); }
		public IgnoreListContext ignoreList() {
			return getRuleContext(IgnoreListContext.class,0);
		}
		public IgnoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ignore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterIgnore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitIgnore(this);
		}
	}

	public final IgnoreContext ignore() throws RecognitionException {
		IgnoreContext _localctx = new IgnoreContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ignore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(IGNORE);
			setState(65);
			match(T__0);
			setState(66);
			((IgnoreContext)_localctx).ignores = ignoreList();
			setState(67);
			match(T__1);

			        ((IgnoreContext)_localctx).val =  ((IgnoreContext)_localctx).ignores.val;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IgnoreListContext extends ParserRuleContext {
		public List<String> val;
		public Token head;
		public IgnoreListContext tail;
		public TerminalNode NAME() { return getToken(GrammarParser.NAME, 0); }
		public IgnoreListContext ignoreList() {
			return getRuleContext(IgnoreListContext.class,0);
		}
		public IgnoreListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ignoreList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterIgnoreList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitIgnoreList(this);
		}
	}

	public final IgnoreListContext ignoreList() throws RecognitionException {
		IgnoreListContext _localctx = new IgnoreListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ignoreList);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				((IgnoreListContext)_localctx).head = match(NAME);
				setState(71);
				match(T__3);
				setState(72);
				((IgnoreListContext)_localctx).tail = ignoreList();

				        ((IgnoreListContext)_localctx).val =  ((IgnoreListContext)_localctx).tail.val;
				        _localctx.val.add(0, (((IgnoreListContext)_localctx).head!=null?((IgnoreListContext)_localctx).head.getText():null));
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				((IgnoreListContext)_localctx).head = match(NAME);

				        ((IgnoreListContext)_localctx).val =  new LinkedList<String>();
				        _localctx.val.add(0, (((IgnoreListContext)_localctx).head!=null?((IgnoreListContext)_localctx).head.getText():null));
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				 ((IgnoreListContext)_localctx).val =  new LinkedList<String>(); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public List<ParserRule> val;
		public RuleListContext r;
		public TerminalNode RULES() { return getToken(GrammarParser.RULES, 0); }
		public RuleListContext ruleList() {
			return getRuleContext(RuleListContext.class,0);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRules(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(RULES);
			setState(81);
			match(T__0);
			setState(82);
			((RulesContext)_localctx).r = ruleList();
			setState(83);
			match(T__1);

			        ((RulesContext)_localctx).val =  ((RulesContext)_localctx).r.val;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleListContext extends ParserRuleContext {
		public List<ParserRule> val;
		public SingleRuleContext head;
		public RuleListContext tail;
		public SingleRuleContext singleRule() {
			return getRuleContext(SingleRuleContext.class,0);
		}
		public RuleListContext ruleList() {
			return getRuleContext(RuleListContext.class,0);
		}
		public RuleListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRuleList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRuleList(this);
		}
	}

	public final RuleListContext ruleList() throws RecognitionException {
		RuleListContext _localctx = new RuleListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ruleList);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				((RuleListContext)_localctx).head = singleRule();
				setState(87);
				((RuleListContext)_localctx).tail = ruleList();

				        ((RuleListContext)_localctx).val =  ((RuleListContext)_localctx).tail.val;
				        _localctx.val.add(0, ((RuleListContext)_localctx).head.val);
				    
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				 ((RuleListContext)_localctx).val =  new LinkedList<ParserRule>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRuleContext extends ParserRuleContext {
		public ParserRule val;
		public Token name;
		public ArgumentsContext args;
		public Token type;
		public AlternativesContext alts;
		public List<TerminalNode> NAME() { return getTokens(GrammarParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GrammarParser.NAME, i);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public SingleRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSingleRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSingleRule(this);
		}
	}

	public final SingleRuleContext singleRule() throws RecognitionException {
		SingleRuleContext _localctx = new SingleRuleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_singleRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			((SingleRuleContext)_localctx).name = match(NAME);
			setState(94);
			match(T__4);
			setState(95);
			((SingleRuleContext)_localctx).args = arguments();
			setState(96);
			match(T__5);
			setState(97);
			match(T__6);
			setState(98);
			((SingleRuleContext)_localctx).type = match(NAME);
			setState(99);
			match(T__2);
			setState(100);
			((SingleRuleContext)_localctx).alts = alternatives();
			setState(101);
			match(T__3);

			        ((SingleRuleContext)_localctx).val =  new ParserRule((((SingleRuleContext)_localctx).name!=null?((SingleRuleContext)_localctx).name.getText():null), ((SingleRuleContext)_localctx).args.val, (((SingleRuleContext)_localctx).type!=null?((SingleRuleContext)_localctx).type.getText():null), ((SingleRuleContext)_localctx).alts.val);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<RuleArgument> val;
		public ArgumentContext head;
		public ArgumentsContext tail;
		public ArgumentContext x;
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArguments(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_arguments);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				((ArgumentsContext)_localctx).head = argument();
				setState(105);
				match(T__7);
				setState(106);
				((ArgumentsContext)_localctx).tail = arguments();

				        ((ArgumentsContext)_localctx).val =  ((ArgumentsContext)_localctx).tail.val;
				        _localctx.val.add(0, ((ArgumentsContext)_localctx).head.val);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				((ArgumentsContext)_localctx).x = argument();

				        ((ArgumentsContext)_localctx).val =  new LinkedList<RuleArgument>();
				        _localctx.val.add(0, ((ArgumentsContext)_localctx).x.val);
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				 ((ArgumentsContext)_localctx).val =  new LinkedList<RuleArgument>(); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public RuleArgument val;
		public Token name;
		public Token type;
		public List<TerminalNode> NAME() { return getTokens(GrammarParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GrammarParser.NAME, i);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArgument(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			((ArgumentContext)_localctx).name = match(NAME);
			setState(116);
			match(T__6);
			setState(117);
			((ArgumentContext)_localctx).type = match(NAME);

			        ((ArgumentContext)_localctx).val =  new RuleArgument((((ArgumentContext)_localctx).name!=null?((ArgumentContext)_localctx).name.getText():null), (((ArgumentContext)_localctx).type!=null?((ArgumentContext)_localctx).type.getText():null));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativesContext extends ParserRuleContext {
		public List<RuleAlternative> val;
		public RuleBodyContext head;
		public AlternativesContext tail;
		public RuleBodyContext ruleBody() {
			return getRuleContext(RuleBodyContext.class,0);
		}
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public AlternativesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternatives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterAlternatives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitAlternatives(this);
		}
	}

	public final AlternativesContext alternatives() throws RecognitionException {
		AlternativesContext _localctx = new AlternativesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_alternatives);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				((AlternativesContext)_localctx).head = ruleBody();
				setState(121);
				match(T__8);
				setState(122);
				((AlternativesContext)_localctx).tail = alternatives();

				        ((AlternativesContext)_localctx).val =  ((AlternativesContext)_localctx).tail.val;
				        _localctx.val.add(0, ((AlternativesContext)_localctx).head.val);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				((AlternativesContext)_localctx).head = ruleBody();

				        ((AlternativesContext)_localctx).val =  new LinkedList<RuleAlternative>();
				        _localctx.val.add(0, ((AlternativesContext)_localctx).head.val);
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				 ((AlternativesContext)_localctx).val =  new LinkedList<RuleAlternative>(); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleBodyContext extends ParserRuleContext {
		public RuleAlternative val;
		public Token init;
		public Token code;
		public AtomsContext bodies;
		public AtomsContext atoms;
		public TerminalNode EPS() { return getToken(GrammarParser.EPS, 0); }
		public List<TerminalNode> CODE() { return getTokens(GrammarParser.CODE); }
		public TerminalNode CODE(int i) {
			return getToken(GrammarParser.CODE, i);
		}
		public AtomsContext atoms() {
			return getRuleContext(AtomsContext.class,0);
		}
		public RuleBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRuleBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRuleBody(this);
		}
	}

	public final RuleBodyContext ruleBody() throws RecognitionException {
		RuleBodyContext _localctx = new RuleBodyContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ruleBody);
		int _la;
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(131);
					((RuleBodyContext)_localctx).init = match(CODE);
					}
				}

				setState(134);
				match(EPS);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(135);
					((RuleBodyContext)_localctx).code = match(CODE);
					}
				}


				        ((RuleBodyContext)_localctx).val =  new EpsilonAlternative((((RuleBodyContext)_localctx).init!=null?((RuleBodyContext)_localctx).init.getText():null), (((RuleBodyContext)_localctx).code!=null?((RuleBodyContext)_localctx).code.getText():null));
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(139);
					((RuleBodyContext)_localctx).init = match(CODE);
					}
					break;
				}
				setState(142);
				((RuleBodyContext)_localctx).bodies = ((RuleBodyContext)_localctx).atoms = atoms();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(143);
					((RuleBodyContext)_localctx).code = match(CODE);
					}
				}

